--- a/public/stylesheets/sass/layout/_about.scss
+++ b/public/stylesheets/sass/layout/_about.scss
@@ -1,6 +1,6 @@
 .about {
 	grid-column: center-start / center-end;
-	padding: 15rem 10rem 15rem 0;
+	padding: 15rem 0;
 
 	display: grid;
 	grid-template-columns: 30vw 50vw;
@@ -10,6 +10,11 @@
 	justify-items: center;
 	align-items: center;
 
+	@media only screen and (max-width: $bp-medium) {
+		grid-template-columns: 70vw;
+		text-align: center;
+	}
+
 	&__image {
 		width: 42rem;
 		height: 53rem;
@@ -18,5 +23,6 @@
 	&__paragraph {
 		font-size: 2rem;
 		color: $color-secondary;
+		line-height: 5rem;
 	}
 }
