--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
 				</ul>
 			</nav>
 			<h1 class="heading-1 header__content">Hi I am <br/> Rituraj Dutta<br/><br/><span>Full Stack Web Developer</span></h1>
-			<img class="header__img" src="/resources/img/header_photo.png" alt="header_photo" />
+			<!-- <img class="header__img" src="/resources/img/header_photo.png" alt="header_photo" /> -->
 		</header>
 
 		<section class="about" id="about">
@@ -146,8 +146,8 @@
 		</section>
 
 		<section class="services" id="services">
-			<h2 class="heading-2 title">My Services</h2>
-			<div class="underline">&mdash;</div>
+			<h2 class="heading-2 title mb-md">My Services</h2>
+			<div class="underline mb-hg">&mdash;</div>
 
 			<div class="service">
 				<i class="fas fa-paint-brush"></i>
@@ -201,8 +201,8 @@
 
 		<section class="projects" id="projects">
 
-			<h2 class="heading-2 title">Projects</h2>
-			<div class="underline">&mdash;</div>
+			<h2 class="heading-2 title mb-md">Projects</h2>
+			<div class="underline mb-hg">&mdash;</div>
 	
 			<figure class="project__shape">
 				<img class="project__image" src="/resources/img/project-1.jpg" alt="project-1" />
@@ -219,7 +219,11 @@
 							<!-- <i class="fas fa-chevron-left" id="left"></i>
 							<i class="fas fa-chevron-right" id="right"></i> -->
 						</figure>
-						<h4 class="heading-4 project__overlay--header">Pictureich</h4>
+						<div class="project__overlay--header">
+							<h4 class="heading-4">Pictureich</h4>
+							<a class="link" href="#">Github Link</a>
+							<a class="link" href="#">Website Link</a>
+						</div>
 						<hr>
 						<p class="project__overlay--para">It is full stack application which is used to sell pictures.</p>
 					</div>
@@ -241,12 +245,20 @@
 							<!-- <i class="fas fa-chevron-left" id="left"></i>
 							<i class="fas fa-chevron-right" id="right"></i> -->
 						</figure>
-						<h4 class="heading-4 project__overlay--header">Homejone</h4>
+						
+						<div class="project__overlay--header">
+							<h4 class="heading-4 project__overlay--header">Homejone</h4>
+							<a class="link" href="#">Github Link</a>
+							<a class="link" href="#">Website Link</a>
+						</div>
+
 						<hr>
+
 						<p class="project__overlay--para">It is a landing page for house selling website. I created the layout using CSS Grid. Also i have created a gallery which shows the power of CSS Grid.</p>
 					</div>
 				</div>
 			</figure>
+
 
 			<figure class="project__shape">
 				<img class="project__image" src="/resources/img/project-3.jpg" alt="project-3" />
@@ -263,7 +275,12 @@
 							<!-- <i class="fas fa-chevron-left" id="left"></i>
 							<i class="fas fa-chevron-right" id="right"></i> -->
 						</figure>
-						<h4 class="heading-4 project__overlay--header">Health Kitchen</h4>
+						
+						<div class="project__overlay--header">
+							<h4 class="heading-4 project__overlay--header">Health Kitchen</h4>
+							<a class="link" href="#">Github Link</a>
+							<a class="link" href="#">Website Link</a>
+						</div>
 						<hr>
 						<p class="project__overlay--para">It is a landing page for healthy food and juices selling page. I created this website using CSS Grid and using some transformation property to show some nice transitions.</p>
 					</div>
@@ -285,12 +302,18 @@
 							<!-- <i class="fas fa-chevron-left" id="left"></i>
 							<i class="fas fa-chevron-right" id="right"></i> -->
 						</figure>
-						<h4 class="heading-4 project__overlay--header">GPA Calculator</h4>
+						
+						<div class="project__overlay--header">
+							<h4 class="heading-4 project__overlay--header">GPA Calculator</h4>
+							<a class="link" href="#">Github Link</a>
+							<a class="link" href="#">Website Link</a>
+						</div>
 						<hr>
 						<p class="project__overlay--para">GPA Calculator is a react application which calculates the gpa of different students. It has two categories for CSE department and Other category. If you are in CSE department then it will directly display all the subjects but if you are in other departments then it will show you the form where you have enter the credit to calculate it. You can also calculate CGPA by entering the semester GPAs.</p>
 					</div>
 				</div>
 			</figure>
+
 
 			<figure class="project__shape">
 				<img class="project__image" src="/resources/img/project-5.jpg" alt="project-5" />
@@ -301,18 +324,25 @@
 				</figcaption>
 				<div class="project__overlay">
 					<div class="project__overlay--container">
+
 						<figure class="project__overlay--figure">
 							<img class="project__overlay--image" src="/resources/img/project-5.jpg" alt="project-5" />
 							<span class="project__overlay--close">&times;</span>
 							<!-- <i class="fas fa-chevron-left" id="left"></i>
 							<i class="fas fa-chevron-right" id="right"></i>	 -->
 						</figure>
-						<h4 class="heading-4 project__overlay--header">Freddie Mercury Tribute Page</h4>
+						
+						<div class="project__overlay--header">
+							<h4 class="heading-4 project__overlay--header">Freddie Mercury Tribute Page</h4>
+							<a class="link" href="#">Github Link</a>
+							<a class="link" href="#">Website Link</a>
+						</div>
 						<hr>
 						<p class="project__overlay--para">It is simple page website which i created to give a tribute to Freddie Mercury. I used CSS Grid to layout the responsiveness.</p>
 					</div>
 				</div>
 			</figure>
+
 
 			<figure class="project__shape">
 				<img class="project__image" src="/resources/img/project-6.jpg" alt="project-6" />
@@ -323,18 +353,27 @@
 				</figcaption>
 				<div class="project__overlay">
 					<div class="project__overlay--container">
+
 						<figure class="project__overlay--figure">
 							<img class="project__overlay--image" src="/resources/img/project-6.jpg" alt="project-6" />
 							<span class="project__overlay--close">&times;</span>
 							<!-- <i class="fas fa-chevron-left" id="left"></i>
 							<i class="fas fa-chevron-right" id="right"></i> -->
 						</figure>
-						<h4 class="heading-4 project__overlay--header">Video Player</h4>
+						
+						<div class="project__overlay--header">
+							<h4 class="heading-4 project__overlay--header">Video Player</h4>
+							<a class="link" href="#">Github Link</a>
+							<a class="link" href="#">Website Link</a>
+						</div>
+
 						<hr>
 						<p class="project__overlay--para">Video Player is a react application where you can search for any term and based on the search term it will display different results and you can select any result to play a video. It uses youtube api to get the results.</p>
+					
 					</div>
 				</div>
 			</figure>
+
 
 		</section>
 
