--- a/public/stylesheets/sass/abstracts/_variables.scss
+++ b/public/stylesheets/sass/abstracts/_variables.scss
@@ -19,4 +19,5 @@ $bp-largest: 75em;   // 1200px
 $bp-large: 62.5em;   // 1000px
 $bp-medium: 50em;    // 800px;
 $bp-small: 37.5em;    // 600px;
+$bp-smallest: 28.125em; // 450px;
 
