--- a/public/stylesheets/sass/base/_base.scss
+++ b/public/stylesheets/sass/base/_base.scss
@@ -12,7 +12,14 @@ html {
 
 	@media only screen and (max-width: $bp-largest) {
         font-size: 50%;
-    }
+	}
+
+	@media only screen and (max-width: $bp-large) {
+		font-size: 45%;
+	}
+	@media only screen and (max-width: $bp-small) {
+		font-size: 37%;
+	}
 }
 
 body {
@@ -24,16 +31,17 @@ body {
 
 .container {
 	display: grid;
-	grid-template-rows: 100vh min-content repeat(7, min-content);
+	grid-template-rows: 100vh repeat(7, min-content);
 	grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(10, [col-start] minmax(min-content, 12rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
 	justify-items: center;
 
-    @media only screen and (max-width: $bp-large) {
-        grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
-        grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
-    }
+    // @media only screen and (max-width: $bp-large) {
+    //     grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+    //     grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+    // }
 
-    @media only screen and (max-width: $bp-medium) {
-        grid-template-rows: 6rem calc(100vh - 6rem);
-    }
+    // @media only screen and (max-width: $bp-medium) {
+    //     grid-template-rows: 6rem calc(100vh - 6rem);
+    // }
 }
+
