--- a/public/stylesheets/sass/base/_typography.scss
+++ b/public/stylesheets/sass/base/_typography.scss
@@ -69,6 +69,23 @@
     }
 }
 
+.link:link, .link:visited {
+	background-color: transparent;
+	color: $color-secondary;
+	font-family: $font-display;
+	text-transform: uppercase;
+	font-size: 1.5rem;
+	padding: 1.3rem 2rem;
+	border: 1px solid $color-grey-dark-2;
+	text-decoration: none;
+	transition: .2s;
+}
+
+.link:hover, .link:active {
+	background-color: $color-secondary;
+	color: $color-grey-light-1;
+}
+
 .underline {
 	line-height: .3rem;
 	background-color: #e67e22;
