--- a/public/stylesheets/sass/layout/_contact.scss
+++ b/public/stylesheets/sass/layout/_contact.scss
@@ -1,12 +1,16 @@
 .contact {
 	grid-column: full-start / full-end;
 	width: 100%;
-	padding: 25rem;
+	padding: 25rem 0;
 
 	display: grid;
 	grid-row-gap: 5rem;
 	justify-content: center;
 	justify-items: center;
+
+	@media only screen and (max-width: $bp-smallest) {
+		padding: 10rem 0;
+	}
 
 	&__list {
 		list-style: none;
