--- a/public/stylesheets/sass/layout/_footer.scss
+++ b/public/stylesheets/sass/layout/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
 	grid-column: full-start / full-end;
 	background-color: black;
-	padding: 1.5rem;
+	padding: 1.5rem 0;
 	width: 100%;
 	box-shadow: -1px -7px 1px -3px rgba(0,0,0,0.75);
 	
