--- a/public/stylesheets/sass/layout/_header.scss
+++ b/public/stylesheets/sass/layout/_header.scss
@@ -1,17 +1,13 @@
 .header {
 	grid-column: full-start / full-end;
-	// padding: 0 10rem;
 	background-image: url(../../resources/img/background.jpg);
 	background-size: cover;
+	background-position: center;
 	width: 100%;
-	height: 100%;
-	margin: 0;
 
 	display: grid;
-	grid-template-columns: repeat(2, 40vw);
-	grid-template-rows: min-content max-content;
-	// grid-column-gap: 10rem;
-	grid-row-gap: 18rem;
+	grid-template-columns: max-content;
+	grid-template-rows: 10vh 90vh;
 	justify-content: center;
 	justify-items: center;
 	align-items: center;
@@ -36,9 +32,9 @@
 			align-items: center;
 			justify-items: center;
 
-			li:first-child a {
-				color: $color-grey-light-1;
-			}
+			// li:first-child a {
+			// 	color: $color-grey-light-1;
+			// }
 
 			a:link, a:visited {
 				text-decoration: none;
@@ -66,17 +62,21 @@
 		}
 	}
 
+	&__content {
+		color: $color-secondary;
+	}
+
 	span {
 		font-size: 3.5rem;
 	}
 
 	i {
-		color: $color-grey-light-1;
-		font-size: 2.5rem;
+		color: $color-secondary;
+		font-size: 3.5rem;
 	}
 
-	&__img {
-		width: 20vw;
-		height: 20vw;
-	}
+	// &__img {
+	// 	width: 20vw;
+	// 	height: 20vw;
+	// }
 }
