--- a/public/stylesheets/sass/layout/_projects.scss
+++ b/public/stylesheets/sass/layout/_projects.scss
@@ -5,11 +5,19 @@
 	width: 100%;
 
 	display: grid;
-	grid-template-columns: repeat(3, 35rem);
+	grid-template-columns: repeat(3, 25vw);
 	grid-template-rows: repeat(2, min-content) repeat(2, 35rem);
-	grid-gap: 6rem;
+	// grid-gap: 5rem;
 	justify-content: center;
 	justify-items: center;
+
+	@media only screen and (max-width: $bp-medium) {
+		grid-template-columns: repeat(2, 40vw);
+		grid-template-rows: repeat(2, min-content) repeat(2, 35rem);
+	}
+	@media only screen and (max-width: $bp-smallest) {
+		grid-template-columns: repeat(2, 47vw);
+	}
 
 	&__para {
 		grid-column: 1 / span 4;
@@ -37,7 +45,7 @@
 		padding: 2rem;
 		position: relative;
 		overflow: hidden;
-		box-shadow: 0px 0px 6px 1px rgba(165, 165, 165, 0.75);
+		box-shadow: 0 1px 3px rgba(0,0,0,0.20), 0 0px 0px rgba(0,0,0,0.10);
 	}
 
 	&__image {
@@ -112,7 +120,7 @@
 			background-color: #fff;
 			padding: 2rem;
 			width: 50%;
-			box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
+			box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 			animation-name: modalopen;
 			animation-duration: 1s;
 
@@ -141,6 +149,20 @@
 			color: $color-secondary;
 			text-decoration: none;
 			cursor: pointer;
+		}
+
+		&--header {
+			display: flex;
+			align-items: center;
+			// justify-content: space-between;
+
+			h4 {
+				flex-grow: 1;
+			}
+
+			a:last-child {
+				margin-left: 2rem;
+			}
 		}
 		
 		&--para {
