--- a/public/stylesheets/sass/layout/_services.scss
+++ b/public/stylesheets/sass/layout/_services.scss
@@ -1,14 +1,21 @@
 .services {
 	grid-column: full-start / full-end;
-	padding: 15rem;
+	padding: 15rem 0;
 
 	display: grid;
-	grid-template-columns: repeat(3, minmax(25rem, max-content));
+	grid-template-columns: repeat(3, 25vw);
 	grid-template-rows: repeat(4, min-content);
-	grid-row-gap: 6rem;
-	grid-column-gap: 7rem;
+	// grid-row-gap: 6rem;
+	// grid-column-gap: 5rem;
 	justify-content: center;
 	justify-items: center;
+
+	@media only screen and (max-width: $bp-medium) {
+		grid-template-columns: repeat(2, 35vw);
+	}
+	@media only screen and (max-width: $bp-smallest) {
+		grid-template-columns: repeat(2, 47vw);
+	}
 
 	&__para {
 		grid-column: 1 / span 4;
@@ -34,10 +41,9 @@
 	display: grid;
 	grid-row-gap: 1.8rem;
 
-	box-shadow: -35px 67px 98px -71px rgba(158,242,235,1);
+	box-shadow: 0 1px 3px rgba(0,0,0,0.20), 0 0px 0px rgba(0,0,0,0.10);
 	text-align: center;
 	padding: 3rem;
-	border: .3px solid rgb(212, 248, 245);;
 	transition: all .2s;
 
 	i {
@@ -50,7 +56,7 @@
 	}
 }
 
-.service:hover {
-	box-shadow: -16px 96px 144px -35px rgba(158,242,235,1);
-}
+// .service:hover {
+// 	box-shadow: -16px 96px 144px -35px rgba(158,242,235,1);
+// }
 
