changed project and services section design to polaroid design

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -206,6 +206,7 @@
 	
 			<figure class="project__shape">
 				<img class="project__image" src="/resources/img/project-1.jpg" alt="project-1" />
+				<h4 class="heading-4">Picureich</h4>
 				<figcaption class="project__caption">
 					<h4 class="heading-4 mb-sm">Picureich</h4>
 					<p class="mb-md">Bootstrap, Nodejs, MongoDB</p>
@@ -232,6 +233,7 @@
 
 			<figure class="project__shape">
 				<img class="project__image" src="/resources/img/project-2.jpg" alt="project-2" />
+				<h4 class="heading-4">Homejone</h4>
 				<figcaption class="project__caption">
 					<h4 class="heading-4 mb-sm">Homejone</h4>
 					<p class="mb-md">CSS Grid</p>
@@ -262,6 +264,7 @@
 
 			<figure class="project__shape">
 				<img class="project__image" src="/resources/img/project-3.jpg" alt="project-3" />
+				<h4 class="heading-4">Health Kitchen</h4>
 				<figcaption class="project__caption">
 					<h4 class="heading-4 mb-sm">Health Kitchen</h4>
 					<p class="mb-md">CSS Grid</p>
@@ -289,6 +292,7 @@
 
 			<figure class="project__shape">
 				<img class="project__image" src="/resources/img/project-4.jpg" alt="project-4" />
+				<h4 class="heading-4">GPA Calculator</h4>
 				<figcaption class="project__caption">
 					<h4 class="heading-4 mb-sm">GPA Calculator</h4>
 					<p class="mb-md">Reactjs, CSS Grid</p>
@@ -317,6 +321,7 @@
 
 			<figure class="project__shape">
 				<img class="project__image" src="/resources/img/project-5.jpg" alt="project-5" />
+				<h4 class="heading-4">Freddie Mercury Tribute Page</h4>
 				<figcaption class="project__caption">
 					<h4 class="heading-4 mb-sm">Freddie Mercury Tribute Page</h4>
 					<p class="mb-md">CSS Grid</p>
@@ -346,6 +351,7 @@
 
 			<figure class="project__shape">
 				<img class="project__image" src="/resources/img/project-6.jpg" alt="project-6" />
+				<h4 class="heading-4">Video Player</h4>
 				<figcaption class="project__caption">
 					<h4 class="heading-4 mb-sm">Video Player</h4>
 					<p class="mb-md">ReactJs, CSS Grid</p>
