--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -363,6 +363,7 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 25vw);
   grid-template-rows: repeat(4, min-content);
+  grid-gap: 3rem;
   justify-content: center;
   justify-items: center; }
   @media only screen and (max-width: 50em) {
@@ -384,7 +385,7 @@ body {
 .service {
   display: grid;
   grid-row-gap: 1.8rem;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), 0 0px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: rgba(0, 0, 0, 0.137255) 0 1px 2px 0, rgba(0, 0, 0, 0.2) 0 3px 1px -2px, rgba(0, 0, 0, 0.117647) 0 1px 5px 0;
   text-align: center;
   padding: 3rem;
   transition: all .2s; }
@@ -402,6 +403,7 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 25vw);
   grid-template-rows: repeat(2, min-content) repeat(2, 35rem);
+  grid-gap: 5rem;
   justify-content: center;
   justify-items: center; }
   @media only screen and (max-width: 50em) {
@@ -422,15 +424,18 @@ body {
     grid-column: 3 / span 1; }
 
 .project__shape {
+  display: grid;
+  grid-gap: 1rem;
+  align-items: center;
+  justify-items: center;
   padding: 2rem;
   position: relative;
   overflow: hidden;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), 0 0px 0px rgba(0, 0, 0, 0.1); }
+  box-shadow: rgba(0, 0, 0, 0.137255) 0 1px 2px 0, rgba(0, 0, 0, 0.2) 0 3px 1px -2px, rgba(0, 0, 0, 0.117647) 0 1px 5px 0; }
 
 .project__image {
-  width: 100%;
-  height: 100%;
-  transform: scale(1.4);
+  width: 30rem;
+  height: 25rem;
   backface-visibility: hidden;
   transition: all .5s; }
 
@@ -456,7 +461,6 @@ body {
   background-color: #f9f7f6; }
 
 .project__shape:hover .project__image {
-  transform: scale(1);
   display: flex;
   flex-direction: column; }
 
