--- a/public/stylesheets/sass/layout/_projects.scss
+++ b/public/stylesheets/sass/layout/_projects.scss
@@ -7,7 +7,7 @@
 	display: grid;
 	grid-template-columns: repeat(3, 25vw);
 	grid-template-rows: repeat(2, min-content) repeat(2, 35rem);
-	// grid-gap: 5rem;
+	grid-gap: 5rem;
 	justify-content: center;
 	justify-items: center;
 
@@ -42,16 +42,21 @@
 .project {
 
 	&__shape {
+		display: grid;
+		grid-gap: 1rem;
+		align-items: center;
+		justify-items: center;
+
 		padding: 2rem;
 		position: relative;
 		overflow: hidden;
-		box-shadow: 0 1px 3px rgba(0,0,0,0.20), 0 0px 0px rgba(0,0,0,0.10);
+		box-shadow: rgba(0, 0, 0, .137255) 0 1px 2px 0, rgba(0, 0, 0, .2) 0 3px 1px -2px, rgba(0, 0, 0, .117647) 0 1px 5px 0;
 	}
 
 	&__image {
-		width: 100%;
-		height: 100%;
-		transform: scale(1.4);
+		width: 30rem;
+		height: 25rem;
+		// transform: scale(1.4);
 		backface-visibility: hidden;
 		transition: all .5s;
 	}
@@ -80,7 +85,7 @@
     }
 
     &__shape:hover &__image {
-		transform: scale(1);
+		// transform: scale(1);
 		// background-color: $color-grey-light-1;
 		// filter: blur(3px) brightness(80%);
 		// filter: opacity(30%);
