--- a/public/stylesheets/sass/layout/_services.scss
+++ b/public/stylesheets/sass/layout/_services.scss
@@ -7,6 +7,7 @@
 	grid-template-rows: repeat(4, min-content);
 	// grid-row-gap: 6rem;
 	// grid-column-gap: 5rem;
+	grid-gap: 3rem;
 	justify-content: center;
 	justify-items: center;
 
@@ -41,7 +42,8 @@
 	display: grid;
 	grid-row-gap: 1.8rem;
 
-	box-shadow: 0 1px 3px rgba(0,0,0,0.20), 0 0px 0px rgba(0,0,0,0.10);
+	// box-shadow: 0 1px 3px rgba(0,0,0,0.20), 0 0px 0px rgba(0,0,0,0.10);
+	box-shadow: rgba(0, 0, 0, .137255) 0 1px 2px 0, rgba(0, 0, 0, .2) 0 3px 1px -2px, rgba(0, 0, 0, .117647) 0 1px 5px 0;
 	text-align: center;
 	padding: 3rem;
 	transition: all .2s;
