--- a/public/stylesheets/css/style.comp.css
+++ b/public/stylesheets/css/style.comp.css
@@ -1,3 +1,89 @@
+@keyframes htmlProg {
+  0% {
+    width: 0; }
+  25% {
+    width: 25%; }
+  50% {
+    width: 50%; }
+  75% {
+    width: 75%; }
+  100% {
+    width: 90%; } }
+
+@keyframes cssProg {
+  0% {
+    width: 0; }
+  25% {
+    width: 25%; }
+  50% {
+    width: 50%; }
+  75% {
+    width: 75%; }
+  100% {
+    width: 85%; } }
+
+@keyframes sassProg {
+  0% {
+    width: 0; }
+  25% {
+    width: 25%; }
+  50% {
+    width: 50%; }
+  75% {
+    width: 75%; }
+  100% {
+    width: 75%; } }
+
+@keyframes jsProg {
+  0% {
+    width: 0; }
+  25% {
+    width: 25%; }
+  50% {
+    width: 50%; }
+  100% {
+    width: 65%; } }
+
+@keyframes reactProg {
+  0% {
+    width: 0; }
+  25% {
+    width: 25%; }
+  50% {
+    width: 50%; }
+  100% {
+    width: 65%; } }
+
+@keyframes nodeProg {
+  0% {
+    width: 0; }
+  25% {
+    width: 25%; }
+  50% {
+    width: 50%; }
+  100% {
+    width: 60%; } }
+
+@keyframes expressProg {
+  0% {
+    width: 0; }
+  25% {
+    width: 25%; }
+  50% {
+    width: 50%; }
+  100% {
+    width: 60%; } }
+
+@keyframes mongodbProg {
+  0% {
+    width: 0; }
+  25% {
+    width: 25%; }
+  50% {
+    width: 50%; }
+  100% {
+    width: 50%; } }
+
 *,
 *::after,
 *::before {
@@ -11,6 +97,12 @@ html {
   @media only screen and (max-width: 75em) {
     html {
       font-size: 50%; } }
+  @media only screen and (max-width: 62.5em) {
+    html {
+      font-size: 45%; } }
+  @media only screen and (max-width: 37.5em) {
+    html {
+      font-size: 37%; } }
 
 body {
   font-family: "Nunito", sans-serif;
@@ -20,16 +112,9 @@ body {
 
 .container {
   display: grid;
-  grid-template-rows: 100vh min-content repeat(7, min-content);
+  grid-template-rows: 100vh repeat(7, min-content);
   grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(10, [col-start] minmax(min-content, 12rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
   justify-items: center; }
-  @media only screen and (max-width: 62.5em) {
-    .container {
-      grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
-      grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; } }
-  @media only screen and (max-width: 50em) {
-    .container {
-      grid-template-rows: 6rem calc(100vh - 6rem); } }
 
 .heading-1, .heading-2, .heading-3, .heading-4 {
   font-family: "Josefin Sans", sans-serif;
@@ -56,7 +141,7 @@ body {
 
 .heading-3 {
   font-size: 1.6rem;
-  color: #7108ad;
+  color: #0886ad;
   text-transform: uppercase; }
 
 .heading-4 {
@@ -67,7 +152,7 @@ body {
     color: rgba(92, 80, 67, 0.562); }
 
 .btn {
-  background-color: #7108ad;
+  background-color: #0886ad;
   color: #fff;
   border: none;
   border-radius: 200px;
@@ -78,15 +163,43 @@ body {
   cursor: pointer;
   transition: all .2s; }
   .btn:hover {
-    background-color: #600b75; }
+    background-color: #0b6575; }
 
 .btn-outline {
   background-color: transparent;
-  border: 1px solid #7108ad;
-  color: #7108ad; }
+  border: 1px solid #0886ad;
+  color: #0886ad; }
   .btn-outline:hover {
-    background-color: #600b75;
+    background-color: #0b6575;
     color: #fff; }
+
+.link:link, .link:visited {
+  background-color: transparent;
+  color: #10442f;
+  font-family: "Josefin Sans", sans-serif;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  padding: 1.3rem 2rem;
+  border: 1px solid #53483c;
+  text-decoration: none;
+  transition: .2s; }
+
+.link:hover, .link:active {
+  background-color: #10442f;
+  color: #f9f7f6; }
+
+.underline {
+  line-height: .3rem;
+  background-color: #e67e22;
+  width: 7rem;
+  grid-column: 1 / -1;
+  grid-row: 2 / span 1; }
+
+.title {
+  grid-column: 1 / -1;
+  grid-row: 1 / span 1;
+  align-self: center;
+  text-align: center; }
 
 .mb-sm {
   margin-bottom: 2rem; }
@@ -102,88 +215,163 @@ body {
 
 .header {
   grid-column: full-start / full-end;
-  padding: 0 10rem;
   background-image: url(../../resources/img/background.jpg);
   background-size: cover;
-  margin: 0;
+  background-position: center;
+  width: 100%;
   display: grid;
-  grid-template-columns: repeat(2, minmax(10rem, 60rem));
-  grid-template-rows: repeat(2, max-content);
-  grid-column-gap: 10rem;
-  grid-row-gap: 18rem;
-  justify-items: start;
+  grid-template-columns: max-content;
+  grid-template-rows: 10vh 90vh;
+  justify-content: center;
+  justify-items: center;
   align-items: center; }
-  .header nav {
+  .header .navbar {
     grid-column: 1 / -1;
     width: 100%;
     margin-top: 3.5rem;
     display: grid;
     grid-template-columns: repeat(2, 1fr); }
-    .header nav ul {
+    .header .navbar ul {
       list-style: none; }
-    .header nav ul:last-child {
+    .header .navbar ul:last-child {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       grid-column-gap: 2rem;
       align-items: center;
       justify-items: center; }
-      .header nav ul:last-child li:first-child a {
-        color: #f9f7f6; }
-      .header nav ul:last-child a:link, .header nav ul:last-child a:visited {
+      .header .navbar ul:last-child a:link, .header .navbar ul:last-child a:visited {
         text-decoration: none;
         color: #10442f;
         font-size: 1.5rem;
         text-transform: uppercase;
-        transition: .2s; }
-      .header nav ul:last-child a:hover, .header nav ul:last-child a:active {
-        border-bottom: 1.6px solid #7108ad; }
-      .header nav ul:last-child li:nth-child(1) {
+        transition: .1s; }
+      .header .navbar ul:last-child a:hover, .header .navbar ul:last-child a:active {
+        border-bottom: 0.1rem solid #0886ad; }
+      .header .navbar ul:last-child li:nth-child(1) {
         grid-column: 1 / span 1; }
-      .header nav ul:last-child li:nth-child(2) {
+      .header .navbar ul:last-child li:nth-child(2) {
         grid-column: 2 / span 1; }
-      .header nav ul:last-child li:nth-child(3) {
+      .header .navbar ul:last-child li:nth-child(3) {
         grid-column: 3 / span 1; }
-      .header nav ul:last-child li:nth-child(4) {
+      .header .navbar ul:last-child li:nth-child(4) {
         grid-column: 4 / span 1; }
+  .header__content {
+    color: #10442f; }
   .header span {
     font-size: 3.5rem; }
   .header i {
-    color: #f9f7f6;
-    font-size: 2.5rem; }
-  .header__img {
-    width: 100%;
-    height: 100%; }
+    color: #10442f;
+    font-size: 3.5rem; }
 
 .about {
   grid-column: center-start / center-end;
-  margin: 15rem 0;
+  padding: 15rem 0;
   display: grid;
-  grid-template-columns: repeat(2, minmax(10rem, 60rem));
-  grid-template-rows: repeat(2, max-content);
-  grid-column-gap: 10rem;
+  grid-template-columns: 30vw 50vw;
+  grid-template-rows: repeat(3, min-content);
+  grid-column-gap: 5rem;
+  grid-row-gap: 4rem;
   justify-items: center;
   align-items: center; }
-  .about img {
-    grid-row: 1 / -1;
-    width: 100%;
-    height: 100%; }
+  @media only screen and (max-width: 50em) {
+    .about {
+      grid-template-columns: 70vw;
+      text-align: center; } }
+  .about__image {
+    width: 42rem;
+    height: 53rem; }
   .about__paragraph {
     font-size: 2rem;
     color: #10442f;
-    text-align: center; }
+    line-height: 5rem; }
 
-.services {
-  grid-column: center-start / center-end;
-  margin: 0 0 15rem 0;
+.skills {
+  grid-column: full-start / full-end;
+  padding: 10rem 0;
+  background-color: #f9f7f6;
+  width: 100%;
   display: grid;
-  grid-template-columns: repeat(3, minmax(25rem, max-content));
-  grid-template-rows: repeat(3, min-content);
-  grid-row-gap: 7rem;
-  grid-column-gap: 7rem;
+  grid-template-columns: repeat(2, 37vw);
+  grid-template-rows: repeat(2, min-content) max-content;
+  grid-gap: 5rem;
   justify-content: center;
   justify-items: center; }
-  .services__title {
-    grid-column: 1 / -1; }
+  @media only screen and (max-width: 50em) {
+    .skills {
+      grid-template-columns: 70vw; } }
+  @media only screen and (max-width: 28.125em) {
+    .skills {
+      grid-template-columns: 90vw; } }
+  .skills .list-1 {
+    grid-row: 3 / span 1;
+    grid-column: 1 / span 1; }
+    @media only screen and (max-width: 50em) {
+      .skills .list-1 {
+        grid-column: 1 / -1; } }
+  .skills .list-2 {
+    grid-row: 3 / span 1;
+    grid-column: 2 / span 1; }
+    @media only screen and (max-width: 50em) {
+      .skills .list-2 {
+        grid-column: 1 / -1;
+        grid-row: 4 / -1; } }
+  .skills__list {
+    list-style: none;
+    color: red;
+    width: 100%; }
+    .skills__list--li {
+      margin: 3rem 0; }
+    .skills__list--bar {
+      background-color: rgba(243, 240, 240, 0.863);
+      height: 2.8rem;
+      border: 1px solid #f9f7f6;
+      display: block; }
+      .skills__list--bar span {
+        background-color: #0886ad;
+        float: left;
+        height: 100%;
+        transition: 2s; }
+      .skills__list--bar .count {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        font-weight: 100;
+        word-spacing: 1rem;
+        padding-right: 1rem;
+        font-size: 1.6rem;
+        color: rgba(92, 80, 67, 0.562); }
+      .skills__list--bar .html {
+        width: 0%; }
+      .skills__list--bar .css {
+        width: 0%; }
+      .skills__list--bar .sass {
+        width: 0%; }
+      .skills__list--bar .javascript {
+        width: 0%; }
+      .skills__list--bar .react {
+        width: 0%; }
+      .skills__list--bar .node {
+        width: 0%; }
+      .skills__list--bar .express {
+        width: 0%; }
+      .skills__list--bar .mongodb {
+        width: 0%; }
+
+.services {
+  grid-column: full-start / full-end;
+  padding: 15rem 0;
+  display: grid;
+  grid-template-columns: repeat(3, 25vw);
+  grid-template-rows: repeat(4, min-content);
+  grid-gap: 3rem;
+  justify-content: center;
+  justify-items: center; }
+  @media only screen and (max-width: 50em) {
+    .services {
+      grid-template-columns: repeat(2, 35vw); } }
+  @media only screen and (max-width: 28.125em) {
+    .services {
+      grid-template-columns: repeat(2, 47vw); } }
   .services__para {
     grid-column: 1 / span 4;
     font-size: 2rem; }
@@ -197,30 +385,34 @@ body {
 .service {
   display: grid;
   grid-row-gap: 1.8rem;
-  box-shadow: -35px 67px 98px -71px #9ef2eb;
+  box-shadow: rgba(0, 0, 0, 0.137255) 0 1px 2px 0, rgba(0, 0, 0, 0.2) 0 3px 1px -2px, rgba(0, 0, 0, 0.117647) 0 1px 5px 0;
   text-align: center;
   padding: 3rem;
-  border: 0.3px solid #d4f8f5;
   transition: all .2s; }
   .service i {
     font-size: 5rem;
-    color: #7108ad; }
+    color: #0886ad; }
   .service__paragraph {
     font-size: 1.7rem; }
 
-.service:hover {
-  box-shadow: -16px 96px 144px -35px #9ef2eb; }
-
 .projects {
   grid-column: full-start / full-end;
+  padding: 20rem 0;
+  background-color: #f9f7f6;
+  width: 100%;
   display: grid;
-  grid-template-columns: repeat(3, 35rem);
-  grid-template-rows: repeat(3, 35rem);
+  grid-template-columns: repeat(3, 25vw);
+  grid-template-rows: repeat(2, min-content) repeat(2, 35rem);
+  grid-gap: 5rem;
   justify-content: center;
   justify-items: center; }
-  .projects__title {
-    grid-column: 1 / -1;
-    align-self: center; }
+  @media only screen and (max-width: 50em) {
+    .projects {
+      grid-template-columns: repeat(2, 40vw);
+      grid-template-rows: repeat(2, min-content) repeat(2, 35rem); } }
+  @media only screen and (max-width: 28.125em) {
+    .projects {
+      grid-template-columns: repeat(2, 47vw); } }
   .projects__para {
     grid-column: 1 / span 4;
     font-size: 2rem; }
@@ -232,13 +424,18 @@ body {
     grid-column: 3 / span 1; }
 
 .project__shape {
+  display: grid;
+  grid-gap: 1rem;
+  align-items: center;
+  justify-items: center;
+  padding: 2rem;
   position: relative;
-  overflow: hidden; }
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.137255) 0 1px 2px 0, rgba(0, 0, 0, 0.2) 0 3px 1px -2px, rgba(0, 0, 0, 0.117647) 0 1px 5px 0; }
 
 .project__image {
-  width: 100%;
-  height: 100%;
-  transform: scale(1.4);
+  width: 30rem;
+  height: 25rem;
   backface-visibility: hidden;
   transition: all .5s; }
 
@@ -264,7 +461,6 @@ body {
   background-color: #f9f7f6; }
 
 .project__shape:hover .project__image {
-  transform: scale(1);
   display: flex;
   flex-direction: column; }
 
@@ -283,24 +479,32 @@ body {
     background-color: #fff;
     padding: 2rem;
     width: 50%;
-    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     animation-name: modalopen;
-    animation-duration: 1s; }
+    animation-duration: 1s;
+    display: grid;
+    grid-row-gap: 2rem; }
   .project__overlay--figure {
     position: relative; }
   .project__overlay--image {
-    width: 100%;
-    height: auto; }
+    width: 100%; }
   .project__overlay--close {
-    color: #ccc;
+    color: #f9f7f6;
     position: absolute;
     right: .9rem;
     top: .1rem;
     font-size: 30px; }
   .project__overlay--close:hover, .project__overlay--close:focus {
-    color: #000;
+    color: #10442f;
     text-decoration: none;
     cursor: pointer; }
+  .project__overlay--header {
+    display: flex;
+    align-items: center; }
+    .project__overlay--header h4 {
+      flex-grow: 1; }
+    .project__overlay--header a:last-child {
+      margin-left: 2rem; }
   .project__overlay--para {
     font-size: 1.7rem; }
 
@@ -312,15 +516,20 @@ body {
 
 .contact {
   grid-column: full-start / full-end;
-  margin: 25rem 0;
+  width: 100%;
+  padding: 25rem 0;
   display: grid;
-  grid-row-gap: 5rem; }
-  .contact ul {
+  grid-row-gap: 5rem;
+  justify-content: center;
+  justify-items: center; }
+  @media only screen and (max-width: 28.125em) {
+    .contact {
+      padding: 10rem 0; } }
+  .contact__list {
     list-style: none;
-    display: flex;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    justify-content: space-between; }
+    display: grid;
+    grid-template-columns: repeat(4, min-content);
+    grid-gap: 3rem; }
   .contact a:link, .contact a:visited {
     text-decoration: none;
     color: #10442f;
@@ -333,11 +542,14 @@ body {
   grid-column: full-start / full-end;
   background-color: #1c1c1c;
   width: 100%;
-  padding: 10rem 0;
+  padding: 10rem 3rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-row-gap: 5rem;
   justify-items: center; }
+  @media only screen and (max-width: 37.5em) {
+    .credit {
+      display: none; } }
   .credit div {
     display: grid;
     grid-row-gap: 3rem;
@@ -361,7 +573,7 @@ body {
 .footer {
   grid-column: full-start / full-end;
   background-color: black;
-  padding: 1.5rem;
+  padding: 1.5rem 0;
   width: 100%;
   box-shadow: -1px -7px 1px -3px rgba(0, 0, 0, 0.75); }
   .footer p {
