--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -363,7 +363,8 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 25vw);
   grid-template-rows: repeat(4, min-content);
-  grid-gap: 3rem;
+  grid-column-gap: 3rem;
+  grid-row-gap: 6rem;
   justify-content: center;
   justify-items: center; }
   @media only screen and (max-width: 50em) {
@@ -371,7 +372,8 @@ body {
       grid-template-columns: repeat(2, 35vw); } }
   @media only screen and (max-width: 28.125em) {
     .services {
-      grid-template-columns: repeat(2, 47vw); } }
+      grid-template-columns: repeat(2, 47vw);
+      grid-column-gap: 0rem; } }
   .services__para {
     grid-column: 1 / span 4;
     font-size: 2rem; }
@@ -403,28 +405,25 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 25vw);
   grid-template-rows: repeat(2, min-content) repeat(2, 35rem);
-  grid-gap: 5rem;
+  grid-row-gap: 6rem;
   justify-content: center;
   justify-items: center; }
-  @media only screen and (max-width: 50em) {
+  @media only screen and (max-width: 75em) {
     .projects {
       grid-template-columns: repeat(2, 40vw);
-      grid-template-rows: repeat(2, min-content) repeat(2, 35rem); } }
+      grid-template-rows: repeat(2, min-content) repeat(2, 40vh); } }
   @media only screen and (max-width: 28.125em) {
     .projects {
-      grid-template-columns: repeat(2, 47vw); } }
+      grid-template-columns: 90vw; } }
   .projects__para {
-    grid-column: 1 / span 4;
+    grid-column: 1 / -1;
     font-size: 2rem; }
-  .projects__1 {
-    grid-column: 1 / span 1; }
-  .projects__2 {
-    grid-column: 2 / span 1; }
-  .projects__3 {
-    grid-column: 3 / span 1; }
 
 .project__shape {
+  width: 100%;
+  height: 100%;
   display: grid;
+  grid-template-rows: 75% 20%;
   grid-gap: 1rem;
   align-items: center;
   justify-items: center;
@@ -434,8 +433,8 @@ body {
   box-shadow: rgba(0, 0, 0, 0.137255) 0 1px 2px 0, rgba(0, 0, 0, 0.2) 0 3px 1px -2px, rgba(0, 0, 0, 0.117647) 0 1px 5px 0; }
 
 .project__image {
-  width: 30rem;
-  height: 25rem;
+  width: 100%;
+  height: 100%;
   backface-visibility: hidden;
   transition: all .5s; }
 
