--- a/public/stylesheets/sass/layout/_projects.scss
+++ b/public/stylesheets/sass/layout/_projects.scss
@@ -7,34 +7,35 @@
 	display: grid;
 	grid-template-columns: repeat(3, 25vw);
 	grid-template-rows: repeat(2, min-content) repeat(2, 35rem);
-	grid-gap: 5rem;
+	grid-row-gap: 6rem;
 	justify-content: center;
 	justify-items: center;
 
-	@media only screen and (max-width: $bp-medium) {
+	@media only screen and (max-width: $bp-largest) {
 		grid-template-columns: repeat(2, 40vw);
-		grid-template-rows: repeat(2, min-content) repeat(2, 35rem);
+		grid-template-rows: repeat(2, min-content) repeat(2, 40vh);
 	}
 	@media only screen and (max-width: $bp-smallest) {
-		grid-template-columns: repeat(2, 47vw);
+		grid-template-columns: 90vw;
+		// grid-template-rows: repeat(2, min-content) repeat(6, 30vh);
 	}
 
 	&__para {
-		grid-column: 1 / span 4;
+		grid-column: 1 / -1;
 		font-size: 2rem;
 	}
 
-	&__1 {
-		grid-column: 1 / span 1;
-	}
+	// &__1 {
+	// 	grid-column: 1 / span 1;
+	// }
 
-	&__2 {
-		grid-column: 2 / span 1;
-	}
+	// &__2 {
+	// 	grid-column: 2 / span 1;
+	// }
 
-	&__3 {
-		grid-column: 3 / span 1;
-	}
+	// &__3 {
+	// 	grid-column: 3 / span 1;
+	// }
 
 
 }
@@ -42,7 +43,10 @@
 .project {
 
 	&__shape {
+		width: 100%;
+		height: 100%;
 		display: grid;
+		grid-template-rows: 75% 20%;
 		grid-gap: 1rem;
 		align-items: center;
 		justify-items: center;
@@ -54,11 +58,16 @@
 	}
 
 	&__image {
-		width: 30rem;
-		height: 25rem;
+		width: 100%;
+		height: 100%;
 		// transform: scale(1.4);
 		backface-visibility: hidden;
 		transition: all .5s;
+
+		// @media only screen and (max-width: $bp-largest) {
+		// 	width: 40rem;
+		// 	height: 35rem;
+		// }
 	}
 
 	&__caption {
