--- a/public/stylesheets/sass/layout/_services.scss
+++ b/public/stylesheets/sass/layout/_services.scss
@@ -7,7 +7,8 @@
 	grid-template-rows: repeat(4, min-content);
 	// grid-row-gap: 6rem;
 	// grid-column-gap: 5rem;
-	grid-gap: 3rem;
+	grid-column-gap: 3rem;
+	grid-row-gap: 6rem;
 	justify-content: center;
 	justify-items: center;
 
@@ -16,6 +17,7 @@
 	}
 	@media only screen and (max-width: $bp-smallest) {
 		grid-template-columns: repeat(2, 47vw);
+		grid-column-gap: 0rem;
 	}
 
 	&__para {
