--- a/public/stylesheets/sass/main.scss
+++ b/public/stylesheets/sass/main.scss
@@ -5,6 +5,9 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/navbar";
+@import "components/burger";
+
 @import "layout/header";
 @import "layout/about";
 @import "layout/skills";
