--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,22 +19,30 @@
     </head>
     <body class="container">
 
+		<nav class="navbar">
+			<div class="navbar__logo">
+				<i class="fas fa-tv"></i>
+			</div>
+			<ul class="navbar__links">
+				<li><a href="#about">About</a></li>
+				<li><a href="#services">Services</a></li>
+				<li><a href="#projects">Projects</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+			<div class="burger">
+				<div class="line-1"></div>
+				<div class="line-2"></div>
+				<div class="line-3"></div>
+			</div>
+		</nav>
+
+
 		<header class="header">
-			<nav class="navbar">
-				<ul>
-					<li><i class="fas fa-tv"></i></li>
-				</ul>
-				<ul>
-					<li><a href="#about">About</a></li>
-					<li><a href="#services">Services</a></li>
-					<li><a href="#projects">Projects</a></li>
-					<li><a href="#contact">Contact</a></li>
-				</ul>
-			</nav>
 			<h1 class="heading-1 header__content">Hi I am <br/> Rituraj Dutta<br/><br/><span>Full Stack Web Developer</span></h1>
 			<!-- <img class="header__img" src="/resources/img/header_photo.png" alt="header_photo" /> -->
 		</header>
 
+		
 		<section class="about" id="about">
 			<img class="about__image" src="/resources/img/about.png" alt="about_photo" />
 			<h2 class="heading-2 title">About Me</h2>
