--- a/public/stylesheets/sass/base/_base.scss
+++ b/public/stylesheets/sass/base/_base.scss
@@ -26,12 +26,12 @@ body {
     font-family: $font-primary;
     color: $color-grey-dark-2;
     font-weight: 300;
-    line-height: 1.6;
+	line-height: 1.6;
 }
 
 .container {
 	display: grid;
-	grid-template-rows: 100vh repeat(7, min-content);
+	grid-template-rows: 8vh 92vh repeat(7, min-content);
 	grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(10, [col-start] minmax(min-content, 12rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
 	justify-items: center;
 
