--- a/public/stylesheets/sass/layout/_header.scss
+++ b/public/stylesheets/sass/layout/_header.scss
@@ -7,60 +7,10 @@
 
 	display: grid;
 	grid-template-columns: max-content;
-	grid-template-rows: 10vh 90vh;
+	grid-template-rows: 92vh;
 	justify-content: center;
 	justify-items: center;
 	align-items: center;
-	
-
-	.navbar {
-		grid-column: 1 / -1;
-		width: 100%;
-		margin-top: 3.5rem;
-
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-
-		ul {
-			list-style: none;
-		}
-
-		ul:last-child {
-			display: grid;
-			grid-template-columns: repeat(4, 1fr);
-			grid-column-gap: 2rem;
-			align-items: center;
-			justify-items: center;
-
-			// li:first-child a {
-			// 	color: $color-grey-light-1;
-			// }
-
-			a:link, a:visited {
-				text-decoration: none;
-				color: $color-secondary;
-				font-size: 1.5rem;
-				text-transform: uppercase;
-				transition: .1s;
-			}
-			a:hover, a:active {
-				border-bottom: .1rem solid $color-primary;
-			}
-
-			li:nth-child(1) {
-				grid-column: 1 / span 1;
-			}
-			li:nth-child(2) {
-				grid-column: 2 / span 1;
-			}
-			li:nth-child(3) {
-				grid-column: 3 / span 1;
-			}
-			li:nth-child(4) {
-				grid-column: 4 / span 1;
-			}
-		}
-	}
 
 	&__content {
 		color: $color-secondary;
@@ -69,14 +19,4 @@
 	span {
 		font-size: 3.5rem;
 	}
-
-	i {
-		color: $color-secondary;
-		font-size: 3.5rem;
-	}
-
-	// &__img {
-	// 	width: 20vw;
-	// 	height: 20vw;
-	// }
 }
