--- a/public/stylesheets/sass/layout/_projects.scss
+++ b/public/stylesheets/sass/layout/_projects.scss
@@ -13,31 +13,17 @@
 
 	@media only screen and (max-width: $bp-largest) {
 		grid-template-columns: repeat(2, 40vw);
-		grid-template-rows: repeat(2, min-content) repeat(2, 40vh);
+		grid-template-rows: repeat(2, min-content) repeat(3, 43rem);
 	}
 	@media only screen and (max-width: $bp-smallest) {
 		grid-template-columns: 90vw;
-		// grid-template-rows: repeat(2, min-content) repeat(6, 30vh);
+		grid-template-rows: repeat(2, min-content) repeat(6, 45rem);
 	}
 
 	&__para {
 		grid-column: 1 / -1;
 		font-size: 2rem;
 	}
-
-	// &__1 {
-	// 	grid-column: 1 / span 1;
-	// }
-
-	// &__2 {
-	// 	grid-column: 2 / span 1;
-	// }
-
-	// &__3 {
-	// 	grid-column: 3 / span 1;
-	// }
-
-
 }
 
 .project {
@@ -73,7 +59,12 @@
 	&__caption {
 		width: 100%;
 		height: 100%;
-		padding: 7rem 3rem 0;
+		// padding: 7rem 3rem 0;
+		display: flex;
+		flex-direction: column;
+		align-content: space-around;
+		align-items: center;
+		justify-content: center;
 		position: absolute;
         top: 50%;
         left: 50%;
@@ -109,7 +100,7 @@
 		position: fixed;
 		z-index: 1;
 		left: 0;
-		top: 0;
+		top: 6vh;
 		height: 100%;
 		width: 100%;
 		overflow: auto;
@@ -140,6 +131,14 @@
 
 			display: grid;
 			grid-row-gap: 2rem;
+
+
+			@media only screen and (max-width: $bp-medium) {
+				width: 60%;
+			}
+			@media only screen and (max-width: $bp-smallest) {
+				width: 70%;
+			}
 		}
 
 		&--figure {
@@ -176,6 +175,15 @@
 
 			a:last-child {
 				margin-left: 2rem;
+			}
+
+			@media only screen and (max-width: $bp-medium) {
+				h4 {
+					font-size: 2rem;
+				}
+				a:last-child {
+					margin-left: 1.4rem;
+				}
 			}
 		}
 		
